Fix: Adjust switcher width and remove c-option-3 rule to remove gap

--- a/style.css
+++ b/style.css
@@ -130,8 +130,8 @@ body.theme-dim {
   display: flex;
   align-items: center;
   gap: 8px;
-  width: 244px;
-  max-width: 244px;
+  width: 168px;
+  max-width: 168px;
   height: 70px;
   box-sizing: border-box;
   padding: 8px 12px 10px;
@@ -284,20 +284,6 @@ body.theme-dim {
 .switcher[c-previous="3"]:has(input[c-option="2"]:checked)::after {
   transform-origin: right;
 }
-
-.switcher:has(input[c-option="3"]:checked)::after {
-  translate: 152px 0;
-  transform-origin: left;
-  transition: 
-    background-color 400ms 
-      cubic-bezier(1, 0.0, 0.4, 1),
-    box-shadow 400ms
-      cubic-bezier(1, 0.0, 0.4, 1),
-    translate 400ms 
-      cubic-bezier(1, 0.0, 0.4, 1);
-  animation: scaleToggle3 440ms ease; 
-}
-
 
  @keyframes scaleToggle {
   0% { scale: 1 1; }
